# icsR8

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml
data/dataset/: AP_coordinate_C3F.csv  Read_Me_1st.txt  estimation_result_C3F.csv  measured_RSSI_C3F.csv  (+1 more)
doc/: icsR8_guidance.txt  icsR8_text.txt  improvement_methods_note.txt  map.html  map_ind.html  maps.html
notebooks/: baseline_reproduction.ipynb  tier1_methods.ipynb  tier2_methods.ipynb  tier3_methods.ipynb  tier4_methods.ipynb
results/: lolo_ledger.csv  lolo_summary.csv  method_diagnostics.csv  protocol_a.csv
scripts/: dump_ap_coord_all_csv.py  dump_method_diagnostics.py  extract_baseline_fixtures.py  generate_baseline_notebook.py  run_all_methods.py  run_tier4.py  verify_report.py
tests/: conftest.py  test_centered_fp.py  test_corridor.py  test_corridor_proj.py  test_estimators_unit.py  test_evaluate.py  test_evaluate_extensions.py  test_fingerprint.py  test_fingerprint_detailed.py  test_fisher_wknn.py  test_gp_augmented_wknn.py  test_gp_corridor.py  test_harness.py  test_harness_tier4.py  test_io.py  test_io_all_aps.py  test_joint_fp.py  test_mahalanobis_wknn.py  test_multiband_wcl.py  test_ordinal_corridor.py  test_plotting.py  test_pls_corridor.py  test_protocols.py  test_public_api.py  test_rank_fp.py  test_registry_equivalence.py  test_reproduce_baseline.py  test_studentt_fp.py  test_tier4_common.py  test_validation.py  test_wcl_blacklist.py  test_wcl_linpower.py  test_wcl_powerdomain.py  test_wcl_residual.py  test_wcl_topl.py  test_wcl_varweight.py  test_wcl_virtual_ap.py  test_wknn.py
(+304 files in other folders)
